Se arregló el enlace de donate y el footer

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <ul class="nav-links">
             <li><a href="./about.html">About</a></li>
             <li><a href="./life.html">Life</a></li>
-            <li><a href="./d flex-shrink: initial;onate.html">Donate</a></li>
+            <li><a href="./donate.html">Donate</a></li>
         </ul>
     </nav>
     <!--end nabvar-->
@@ -53,7 +53,7 @@
     <!-- start footer -->
 
     <footer class="footer">
-        <h3>¡Haz llegado al final!</h2>
+        <h3>¡Has llegado al final!</h2>
         <p>Esta página está dedicada a practicar mis habilidades para desarrollo web. Y mostrar fotos de gatos</p>
         <div class="social-icons">
             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
