--- a/donate.html
+++ b/donate.html
@@ -73,7 +73,7 @@
 
         <!-- start footer -->
         <footer class="footer">
-            <h3>¡Haz llegado al final!</h3>
+            <h3>¡Has llegado al final!</h3>
             <p>Esta página está dedicada a practicar mis habilidades para desarrollo web y mostrar fotos de gatos.</p>
             <div class="social-icons">
                 <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
