--- a/donate.html
+++ b/donate.html
@@ -1,89 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milaneso Blog</title>
-    <!--CSS-->
-    <link rel="stylesheet" href="./assets/css/styleDonate.css">
-    <!--FavIcon-->
-    <link rel="icon" type="image/png" href="./img/favIcon_paw.png">
-    <!--Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!--Fuentes fontawesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Milaneso Blog</title>
+<!--CSS-->
+<link rel="stylesheet" href="./assets/css/styleDonate.css" />
+<!--FavIcon-->
+<link rel="icon" type="image/png" href="./img/favIcon_paw.png" />
+<!--Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!--FontAwesome-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
-    <!--navbar-->
-    <nav class="navbar">
-        <div class="logo">Milaneso Blog</div>
-        <ul class="nav-links">
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./life.html">Life</a></li>
-            <li><a href="./donate.html">Donate</a></li>
-        </ul>
-    </nav>
-    <!--end navbar-->
+<!--navbar-->
+<nav class="navbar">
+    <div class="logo">Milaneso Blog</div>
+    <ul class="nav-links">
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./life.html">Life</a></li>
+        <li><a href="./donate.html">Donate</a></li>
+    </ul>
+</nav>
 
-    <div class="container-fluid">
-        <header class="hero-section">
-            <h2>¡Gracias por visitarme!</h2>
-        </header>
+<div class="container-fluid">
+    <header class="hero-section">
+        <h2>¡Gracias por visitarme!</h2>
+    </header>
 
-        <!-- Hero Section -->
-        <div class="hero-section">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <img src="./assets/img/donate_cat1.png" class="img-fluid" alt="">
+    <div class="hero-section">
+        <div class="row">
+        <div class="col-12 col-md-4">
+            <img src="./assets/img/donate_cat1.png" class="img-fluid" alt="gatito" />
+        </div>
+        <div class="col-12 col-md-7 offset-md-1 col-lg-6 offset-lg-1">
+            <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title"><strong>¿Quieres apoyarme?</strong></h5>
+                <p class="card-text">No dudes en donar :D</p>
+            </div>
+    </div>
+
+<!-- Formulario -->
+<div class="card" id="form-card">
+            <div class="card-body">
+                <form id="donacion-form">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" required placeholder="Tu nombre porfavor" />
                 </div>
-                <div class="col-12 col-md-7 offset-md-1 col-lg-6 offset-lg-1">
-                    <div class="card mb-3">
-                        <div class="card-body">
-                            <h5 class="card-title"><strong>¿Quieres apoyarme?</strong></h5>
-                            <p class="card-text">No dudes en donar :D</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <form>
-                                <div class="mb-3">
-                                    <label for="nombre" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="nombre" placeholder="Tu nombre porfavor" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="correo" class="form-label">Correo</label>
-                                    <input type="email" class="form-control" id="correo" placeholder="name@example.com" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="mensaje" class="form-label">Mensaje</label>
-                                    <textarea class="form-control" id="mensaje" rows="3" placeholder="Escribe algo bonito :D" required></textarea>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="cantidad" class="form-label">Cantidad a donar (USD)</label>
-                                    <input type="number" class="form-control" id="cantidad" placeholder="Tu donación me ayudará a mantenerme sano y coleando" required>
-                                </div>
-                                <button type="submit" class="btn btn-primary"><strong>Donar</strong></button>
-                            </form>
-                        </div>
-                    </div>
+                <div class="mb-3">
+                    <label for="correo" class="form-label">Correo</label>
+                    <input type="email" class="form-control" id="correo" required placeholder="name@example.com" />
                 </div>
+                <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="mensaje" rows="3" required placeholder="Escribe algo bonito :D"></textarea>
+                </div>
+                <div class="mb-3">
+                    <label for="cantidad" class="form-label">Cantidad a donar (USD)</label>
+                    <input type="number" class="form-control" id="cantidad" required placeholder="Tu donación me ayudará a mantenerme sano y coleando" />
+                </div>
+                <button type="submit" class="btn btn-primary"><strong>Donar</strong></button>
+                </form>
+            </div>
+            </div>
+
+            <!-- Mensaje de agradecimiento oculto -->
+            <div class="card text-center d-none" id="gracias-card">
+            <div class="card-body">
+                <h4 class="card-title text-success">¡Gracias por tu donación! 🐾</h4>
+                <p class="card-text">Tu apoyo ayuda a mantener a Milaneso feliz y saludable 💚</p>
+                <a href="./donate.html" class="btn btn-outline-success mt-2">Donar otra vez</a>
+            </div>
             </div>
         </div>
-
-        <!-- start footer -->
-        <footer class="footer">
-            <h3>¡Has llegado al final!</h3>
-            <p>Esta página está dedicada a practicar mis habilidades para desarrollo web y mostrar fotos de gatos.</p>
-            <div class="social-icons">
-                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
-            <a href="#top" class="back-to-top">Regresar arriba</a>
-            <a href="index.html" class="back-to-top">Regresar a la pagina Main</a>
-        </footer>
-        <!-- end footer -->
+        </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer mt-5">
+        <h3>¡Has llegado al final!</h3>
+        <p>Esta página está dedicada a practicar mis habilidades para desarrollo web y mostrar fotos de gatos.</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <a href="#top" class="back-to-top">Regresar arriba</a>
+        <a href="index.html" class="back-to-top">Regresar a la pagina Main</a>
+    </footer>
+</div>
+
+<!-- JavaScript para manejar el envío -->
+<script>
+    const form = document.getElementById('donacion-form');
+    const formCard = document.getElementById('form-card');
+    const graciasCard = document.getElementById('gracias-card');
+
+    form.addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        const data = {
+        nombre: document.getElementById('nombre').value,
+        correo: document.getElementById('correo').value,
+        mensaje: document.getElementById('mensaje').value,
+        cantidad: parseFloat(document.getElementById('cantidad').value),
+    };
+
+        try {
+        const response = await fetch('https://milaneso-api.onrender.com/api/donaciones', {
+            method: 'POST',
+            headers: {
+            'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(data),
+        });
+
+        if (response.ok) {
+            formCard.classList.add('d-none');
+            graciasCard.classList.remove('d-none');
+        } else {
+            alert('Error al enviar la donación. Intenta de nuevo.');
+        }
+        } catch (error) {
+        alert('Error de conexión. Intenta más tarde.');
+        }
+    });
+</script>
 </body>
 </html>
