--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milaneso Blog</title>
-    <!--CSS-->
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <!--FavIcon-->
-    <link rel="icon" type="image/png" href="./img/favIcon_paw.png">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Milaneso Blog</title>
+<link rel="stylesheet" href="./assets/css/style2.css"/>
+<link rel="icon" type="image/png" href="./img/favIcon_paw.png"/>
 </head>
 <body>
-    <div class="container">
-        <div class="cat-container">
-            <img src="./assets/img/maincat.png" alt="Cat" class="cat-image">
-            <button class="nose-button" onclick="window.location.href='./about.html'"></button>
-        </div>
-        <div class="title-container">
-            <h3 class="title">Para iniciar<br><span class="bold">Toca mi nariz</span></h3>
-        </div>
+<div class="container">
+    <div class="cat-container">
+    <div class="cat-image-wrapper">
+        <img src="./assets/img/maincat.png" alt="Cat" class="cat-image"/>
+        <button class="nose-button" onclick="window.location.href='./about.html'"></button>
     </div>
+    </div>
+    <div class="title-container">
+    <h3 class="title">Para iniciar<br><span class="bold">Toca mi nariz</span></h3>
+    </div>
+</div>
 </body>
 </html>
