--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Milaneso Blog</title>
-<link rel="stylesheet" href="./assets/css/style2.css"/>
+<link rel="stylesheet" href="./assets/css/style.css"/>
 <link rel="icon" type="image/png" href="./img/favIcon_paw.png"/>
 </head>
 <body>
